--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -9,7 +9,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="http://cssreset.com/normalize.css"> -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/patriot_cuts.css">
-	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 	 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	  <!--style for carousel  -->
 	  <style>
@@ -213,6 +213,6 @@
 	
 
 <!-- Load the Google Maps API [DON'T FORGET TO USE A KEY] -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrJtDlJgRpm1HBbRhYMy_2oTW_TFm35Rg"></script>
+ <!--    // <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrJtDlJgRpm1HBbRhYMy_2oTW_TFm35Rg"></script> -->
 </body>
 </html>
