--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -160,7 +160,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img/dancer.jpg" alt="Chania" width="460" height="345">
+        <img src="img/haircutbw1.png" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -168,7 +168,7 @@
       </div>
 
       <div class="item">
-        <img src="img/dancer5.jpg" alt="Chania" width="460" height="345">
+        <img src="img/haircutbw2.png" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -176,7 +176,7 @@
       </div>
     
       <div class="item">
-        <img src="img/market.jpg" alt="Flower" width="460" height="345">
+        <img src="img/haircutbw3.png" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
@@ -184,7 +184,7 @@
       </div>
 
       <div class="item">
-        <img src="img/masks.jpg" alt="Flower" width="460" height="345">
+        <img src="img/chairsbw.png" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
