changed title and sentence info on each carousel image

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -160,34 +160,34 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img/dancer.jpg" alt="Chania" width="460" height="345">
+        <img src="img/haircutbw1.png" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Service</h3>
+          <p>Expect the very best</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="img/dancer5.jpg" alt="Chania" width="460" height="345">
+        <img src="img/haircutbw2.png" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Relax</h3>
+          <p>Serene surroundings.</p>
         </div>
       </div>
     
       <div class="item">
-        <img src="img/market.jpg" alt="Flower" width="460" height="345">
+        <img src="img/haircutbw3.png" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <h3>Detail</h3>
+          <p>Every customer is important.</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="img/masks.jpg" alt="Flower" width="460" height="345">
+        <img src="img/chairsbw.png" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <h3>Atmosphere</h3>
+          <p>Complimentary drinks, big screen tv and friendly staff.</p>
         </div>
       </div>
   
