--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -13,17 +13,13 @@
 	 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	  <!--style for carousel  -->
 	  <style>
-	  .carousel-inner > .item > img,
-	  .carousel-inner > .item > a > img {
-	      width: 100%;
-	      margin: auto;
-	  }
 	  </style>
 
 </head>
 <body>
   	<div class="container">
 <header>
+	<a id="top"></a>
 	<nav class="navbar navbar-inverse">
 	  <!-- <div class="container-fluid"> -->
 	    <div class="navbar-header">
@@ -146,6 +142,7 @@
 	 </div>
 	</nav>
 </header>
+<hr>
 <section>
 		<div class="row">
     		<div class="col-sm-8 col-md-4 col-lg-12">
@@ -207,12 +204,13 @@
 				  </div>
 				</div>
 			</section>
+			<hr>
 <!-- Carousel END-->
 	<section class="services-section">
 		<!-- Services Well -->
 		<div class="row">
     		<div class="col-sm-8 col-md-4 col-lg-12">
-    			 <div class="well services-well panel-text">Services</div>
+    			 <div class="well services-well well-text">Services</div>
     			 <a id="services"></a>
 
     			 <!-- services panels row 1 -->
@@ -328,18 +326,71 @@
 					</div>
 <div class="row">
     		<div class="col-sm-8 col-md-4 col-lg-12">
-    			 <div class="well services-well panel-text">HOURS: Monday - Friday 10 - 7, Saturday 10 - 6, Sunday 11 - 5</div>
+    			 <div class="well services-footer">HOURS: Monday thru Friday 10 - 7, Saturday 10 - 6, Sunday 11 - 5</div>
+	  		<a href="#top" class="return-top">Back to Top</a> 
 
 
 					</div>
 
-
 	</section>
+	<hr>
+<section>
+	<div id="map-canvas"></div>
+	<a id="location"></a>
+	<a href="#top" class="return-top">Back to Top</a> 
 
+</section>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGUPMgw96CJ92ps0zOrB7kw8cH_tcCnVs"></script>
+  <script type="text/javascript">
+    (function() {
+      "use strict";
+      var address = "Address: 3246 Broadway St, San Antonio, TX 78209";
+      var geocoder = new google.maps.Geocoder();
+      geocoder.geocode({
+        "address": address
+      }, function(results, status) {
+        if (status == google.maps.GeocoderStatus.OK) {
+          console.log(results);
+          map.setCenter(mapOptions);
+          var marker = new google.maps.Marker({
+            "position": results[0].geometry.location,
+            "map": map,
+            "animation": google.maps.Animation.DROP,
+            "icon": 'BarberShopPole.png'
+          });
+          var contentString = '<div id="content">' +
+            '<div id="siteNotice">' +
+            '</div>' +
+            '<div id="bodyContent">' +
+            '<p><img src="BarberShopFront.jpg" alt="Patriot Cuts Barber Shop Store Front"></p>' +
+            '<p><b>Address: </b>3246 Broadway St, San Antonio, TX 78209</p>' +
+            '<p><b>Phone: </b>(210) 822-0780</p>' +
+            '</div>' +
+            '</div>';
+          var info = new google.maps.InfoWindow({
+            content: contentString
+          });
+          // info.open(map, marker);
+          google.maps.event.addListener(marker, 'mouseover', function() {
+            info.open(map, marker);
+          });
+          google.maps.event.addListener(marker, 'mouseout', function() {
+            info.close(map, marker);
+          });
+        }
+      });
+      var mapOptions = {
+        zoom: 17,
+        center: {
+          lat: 29.458638,
+          lng: -98.469354
+        },
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      };
+      var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+    })();
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
-	
-
-<!-- Load the Google Maps API [DON'T FORGET TO USE A KEY] -->
- <!--    // <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrJtDlJgRpm1HBbRhYMy_2oTW_TFm35Rg"></script> -->
 </body>
 </html>
