Weekend work Standifer

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -6,14 +6,16 @@
 	<meta charset="utf-8">
 	<meta lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=0">
-	<!-- <link rel="stylesheet" type="text/css" href="http://cssreset.com/normalize.css"> -->
+	<link rel="stylesheet" type="text/css" href="http://cssreset.com/normalize.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/patriot_cuts.css">
 	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 	 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/patriot_cuts.js">
 	  <!--style for carousel  -->
 	  <style>
 	  </style>
+
 
 </head>
 <body>
@@ -218,111 +220,112 @@
     			 <!-- services panels row 1 -->
     			 <div class="row">
     			 	<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Men Haircuts</div>
-  						<div class="panel-body">
-								<div class="services men-cuts">
+  						<div class="panel-body male-cuts">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;12.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;12.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 
     			 	<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary women-cuts">
   						<div class="panel-heading panel-text">Women's Haircuts</div>
   						<div class="panel-body">
-								<div class="services womans-cuts">
+								<div class="services womans-cuts panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;15.&#186;&#186;, and up</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;15.&#186;&#186; &amp; &#8679;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 
 					<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary shampoo">
   						<div class="panel-heading panel-text">Shampoo <span class="tea">[Tea Tree]</span></div>
   						<div class="panel-body">
-								<div class="services shampoo">
+								<div class="services shampoo panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;5.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;5.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 
 					<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Hair Dye</div>
   						<div class="panel-body">
-								<div class="services hair-dye">
+								<div class="services hair-dye panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;35.&#186;&#186;, and up</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;35.&#186;&#186; &amp; &#8679;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 				</div>
+		
 		<!-- services panels row 2 -->
 				<div class="row">
     			 	<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Eyebrow Wax</div>
   						<div class="panel-body">
-								<div class="services brow-wax">
+								<div class="services brow-wax panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;10.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;10.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 					<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Beard Trim</div>
   						<div class="panel-body">
-								<div class="services brow-wax">
+								<div class="services beard-trim panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;5.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;5.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 					<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Moustache Trim</div>
   						<div class="panel-body">
-								<div class="services brow-wax">
+								<div class="services stache-trim panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;3.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;3.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 					<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Head Shave</div>
   						<div class="panel-body">
-								<div class="services payment">
+								<div class="services head-shave panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;3.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;22.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
@@ -331,40 +334,40 @@
 
 				<div class="row">
     			 	<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts hidden">
+    			 		<div class="panel panel-primary men-cuts hidden">
   						<div class="panel-heading panel-text">Fade</div>
   						<div class="panel-body">
-								<div class="services brow-wax">
+								<div class="services fade panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;10.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;10.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 					<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
-  						<div class="panel-heading panel-text">Whatever's left</div>
+    			 		<div class="panel panel-primary men-cuts">
+  						<div class="panel-heading panel-text">Razor Fade</div>
   						<div class="panel-body">
-								<div class="services brow-wax">
+								<div class="services razor-fade panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;5.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;18.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
 					</div>
 					<div class="col-sm-3 col-md-3 col-lg-3">
-    			 		<div class="panel panel-danger men-cuts">
+    			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Fade</div>
   						<div class="panel-body">
-								<div class="services brow-wax">
+								<div class="services brow-wax panel-img">
 									<p></p>
 									<p></p></div>
-							<footer>
-    							<p class="price panel-text">&#36;10.&#186;&#186;</p>
+							<footer class="panel-footer">
+    							<p class="price">&#36;10.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
@@ -445,6 +448,8 @@
       };
       var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
     })();
+
+    
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
