--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -161,7 +161,7 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img/haircutbw1.png" alt="Haircut" width="460" height="345">
+        <img src="img/haircutbw1-169.png" alt="Haircut" width="460" height="345">
         <div class="carousel-caption">
           <h3>Service</h3>
           <p>Expect the very best</p>
@@ -169,7 +169,7 @@
       </div>
 
       <div class="item">
-        <img src="img/haircutbw2.png" alt="Hot Towel" width="460" height="345">
+        <img src="img/haircutbw2-169.png" alt="Hot Towel" width="460" height="345">
         <div class="carousel-caption">
           <h3>Relax</h3>
           <p>Serene surroundings.</p>
@@ -177,7 +177,7 @@
       </div>
     
       <div class="item">
-        <img src="img/haircutbw3.png" alt="Haircut" width="460" height="345">
+        <img src="img/haircutbw3-169.png" alt="Haircut" width="460" height="345">
         <div class="carousel-caption">
           <h3>Detail</h3>
           <p>Every customer is important.</p>
@@ -185,7 +185,7 @@
       </div>
 
       <div class="item">
-        <img src="img/chairsbw.png" alt="Barber Chairs" width="460" height="345">
+        <img src="img/chairsbw-169.png" alt="Barber Chairs" width="460" height="345">
         <div class="carousel-caption">
           <h3>Atmosphere</h3>
           <p>Complimentary drinks, big screen tv and friendly staff.</p>
