Standifer Monday 29 Feb, services complete

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -236,8 +236,8 @@
     			 	<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary women-cuts">
   						<div class="panel-heading panel-text">Women's Haircuts</div>
-  						<div class="panel-body">
-								<div class="services womans-cuts panel-img">
+  						<div class="panel-body womans-cuts">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -250,8 +250,8 @@
 					<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary shampoo">
   						<div class="panel-heading panel-text">Shampoo <span class="tea">[Tea Tree]</span></div>
-  						<div class="panel-body">
-								<div class="services shampoo panel-img">
+  						<div class="panel-body shampoo">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -265,8 +265,8 @@
 					<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Hair Dye</div>
-  						<div class="panel-body">
-								<div class="services hair-dye panel-img">
+  						<div class="panel-body hair-dye">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -282,8 +282,8 @@
     			 	<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Eyebrow Wax</div>
-  						<div class="panel-body">
-								<div class="services brow-wax panel-img">
+  						<div class="panel-body brow-wax">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -295,8 +295,8 @@
 					<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Beard Trim</div>
-  						<div class="panel-body">
-								<div class="services beard-trim panel-img">
+  						<div class="panel-body beard-trim">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -308,8 +308,8 @@
 					<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Moustache Trim</div>
-  						<div class="panel-body">
-								<div class="services stache-trim panel-img">
+  						<div class="panel-body stache-trim">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -321,8 +321,8 @@
 					<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Head Shave</div>
-  						<div class="panel-body">
-								<div class="services head-shave panel-img">
+  						<div class="panel-body head-shave">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -337,8 +337,8 @@
     			 	<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts hidden">
   						<div class="panel-heading panel-text">Fade</div>
-  						<div class="panel-body">
-								<div class="services fade panel-img">
+  						<div class="panel-body fade">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -350,8 +350,8 @@
 					<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts">
   						<div class="panel-heading panel-text">Razor Fade</div>
-  						<div class="panel-body">
-								<div class="services razor-fade panel-img">
+  						<div class="panel-body razor-fade">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
@@ -362,13 +362,13 @@
 					</div>
 					<div class="col-sm-3 col-md-3 col-lg-3">
     			 		<div class="panel panel-primary men-cuts">
-  						<div class="panel-heading panel-text">Fade</div>
-  						<div class="panel-body">
-								<div class="services brow-wax panel-img">
+  						<div class="panel-heading panel-text">Beard Shave</div>
+  						<div class="panel-body beard-shave">
+								<div class="services panel-img">
 									<p></p>
 									<p></p></div>
 							<footer class="panel-footer">
-    							<p class="price">&#36;10.&#186;&#186;</p>
+    							<p class="price">&#36;18.&#186;&#186;</p>
         					</footer>
 						</div>
 						</div>
