--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -38,13 +38,28 @@
   <nav class="navbar navbar-inverse">
     <!-- <div class="container-fluid"> -->
       <div class="navbar-header">
+      	 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
         <img src="pcbsLogoPoleWh.png" alt="logo" width="200" height="75">
       </div>
-        <button type="button" class="btn btn-link btn-sm header-text" data-toggle="modal" data-target="#myModal">Hours |</button>
+      <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+      
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#services" class="text header-text services">Services</a></li>
+            <li><a><button type="button" class="btn btn-link text" data-toggle="modal" data-target="#myModal">Hours</button></a></li>
+            <li><a href="#location" class="text header-text">Location</a></li>
+            <li><button type="button" class="btn btn-link text" data-toggle="modal" data-target="#contact-modal">Contact us</button></li>
+          </ul>
+        </li>
+      </div>
+        <!-- <button type="button" class="btn btn-link btn-sm header-text" data-toggle="modal" data-target="#myModal">Hours |</button>
         <a href="#services" class="header-text services">Services |</a> 
         <a href="#location" class="header-text location">Location |</a> 
         <button type="button" class="btn btn-link btn-sm header-text" data-toggle="modal" data-target="#contact-modal">Contact Us</button>
-            
+             -->
   <!-- Hours Modal -->
         <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
@@ -399,19 +414,34 @@
 	<hr>
 	<!--Begin Location Section-->
 	<section>
+			<div id="map-canvas"></div>
 		<div class="shop-info">
+			<br>
+			<br>
+			<br>
+			<br>
 			<p class="shop-address pcbs"><span class="patriot">Patriot</span> Cuts <span class="bs">Barber Shop</span></p>
 			<p class="shop-address">3246 Broadway Street</p>
 			<p class="shop-address">San Antonio, TX., 78209 </p>
 			<p class="phone-number">phone: (210) 822-0780</p>
 			<p class="loc-hours">hours: M - F, 10am - 7pm; Sat, 10am - 6pm; Sun, 11am - 5pm</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<a id="location"></a>
+  			<a href="#top" class="return-top">Back to Top</a> 
 		</div>
-		<div id="map-canvas"></div>
-		<a id="location"></a>
-		<a href="#top" class="return-top">Back to Top</a> 
 	</section>
 
+
+
   <hr>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+   <script src="js/lightbox.js"></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?AIzaSyDrJtDlJgRpm1HBbRhYMy_2oTW_TFm35Rg"></script>
 <!-- IMAGE GALLERY START -->
 <div>
       <a class="example-image-link" href="/img/boy.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/boy-thumb.png" alt=""/></a>
@@ -421,19 +451,6 @@
 </div>
 
 <!-- IMAGE GALLERY END -->
-
-  <hr>
-<section>
-  <div id="map-canvas"></div>
-  <a id="location"></a>
-  <a href="#top" class="return-top">Back to Top</a> 
-</section>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   <script src="js/lightbox.js"></script>
-
->>>>>>> 1b643f0a6575eccdcb15e229a28ec0b85db43350
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGUPMgw96CJ92ps0zOrB7kw8cH_tcCnVs"></script>
   <script type="text/javascript">
       "use strict";
     (function() {
