Tuesday 1 March 3rd push. collapsible header

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -13,23 +13,8 @@
 	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 	 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/patriot_cuts.js">
-	  
-  <title>Patriot Cuts</title>
-  <meta charset="utf-8">
-  <meta lang="en">
-  <meta name="viewport" content="width=device-width, initial-scale=0">
-  <!-- <link rel="stylesheet" type="text/css" href="http://cssreset.com/normalize.css"> -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/patriot_cuts.css">
-  <link rel="stylesheet" type="text/css" href="css/lightbox.css">
-    <!--style for carousel  -->
-   
-
-    <style>
-    </style>
-
-
-
+	<link rel="stylesheet" type="text/css" href="css/lightbox.css">
+  
 </head>
 <body>
     <div class="container">
@@ -48,18 +33,13 @@
       <div class="collapse navbar-collapse navbar-right" id="myNavbar">
       
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#services" class="text header-text services">Services</a></li>
-            <li><a><button type="button" class="btn btn-link text" data-toggle="modal" data-target="#myModal">Hours</button></a></li>
-            <li><a href="#location" class="text header-text">Location</a></li>
-            <li><button type="button" class="btn btn-link text" data-toggle="modal" data-target="#contact-modal">Contact us</button></li>
+            <li><a href="#services" class="text header-text btn-link services">Services</a></li>
+            <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#myModal">Hours</a></li>
+            <li><a href="#location" class="text header-text btn-link">Location</a></li>
+            <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#contact-modal">Contact us</a></li>
           </ul>
         </li>
       </div>
-        <!-- <button type="button" class="btn btn-link btn-sm header-text" data-toggle="modal" data-target="#myModal">Hours |</button>
-        <a href="#services" class="header-text services">Services |</a> 
-        <a href="#location" class="header-text location">Location |</a> 
-        <button type="button" class="btn btn-link btn-sm header-text" data-toggle="modal" data-target="#contact-modal">Contact Us</button>
-             -->
   <!-- Hours Modal -->
         <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
@@ -235,7 +215,6 @@
   </div>
 </div>
 <!-- Carousel END-->
-<<<<<<< HEAD
 <hr>
 <!-- Begin Services Section-->
 	<section class="services-section">
