added rest of images to gallery and changed quote images

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -10,11 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="/patriot_cuts.css">
   <link rel="stylesheet" type="text/css" href="css/lightbox.css">
-    <!--style for carousel  -->
-   
-
-    <style>
-    </style>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -340,10 +336,105 @@
       <a class="example-image-link" href="/img/boy.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/boy-thumb.png" alt=""/></a>
       <a class="example-image-link" href="img/ghost.png" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/ghost-thumb.png" alt="" /></a>
       <a class="example-image-link" href="img/haircut4.png" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="img/haircut4-thumb.png" alt="" /></a>
-      <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-6.jpg" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-6.jpg" alt="" /></a>
+      <a class="example-image-link" href="img/arcade.png" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="img/arcade-thumb.png" alt="" /></a>
+
+
+
+      <a class="example-image-link" href="/img/fridge.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/fridge-thumb.png" alt=""/></a>
+      <a class="example-image-link" href="img/waiting.png" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/waiting-thumb.png" alt="" /></a>
+      <a class="example-image-link" href="img/vader.png" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="img/vader-thumb.png" alt="" /></a>
+      <a class="example-image-link" href="img/storefront.png" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="img/storefront-thumb.png" alt="" /></a>
+      <a class="example-image-link" href="img/haircut8.png" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="img/haircut8-thumb.png" alt="" /></a>
+
+
+      <a class="example-image-link" href="/img/haircut7.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="img/haircut7-thumb.png" alt=""/></a>
+      <a class="example-image-link" href="img/teatree.png" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="img/teatree-thumb.png" alt="" /></a>
+      
+      <a class="example-image-link" href="img/xwing.png" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="img/xwing-thumb.png" alt="" /></a>
 </div>
 
 <!-- IMAGE GALLERY END -->
+
+<!--  Testimonials  START -->
+<h1 id="quote-title">What people are saying<h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+        <!-- Carousel Slides / Quotes -->
+        <div class="carousel-inner text-center">
+          <!-- Quote 1 -->
+          <div class="item active">
+            <blockquote>
+              <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                  <p>Very clean professional and wow they made my husband look so handsome!! Awesome haircut for a reasonable price.
+                  </p>
+                  <important>- Bethany O.</important>
+                </div>
+              </div>
+            </blockquote>
+          </div>
+          <!-- Quote 2 -->
+          <div class="item">
+            <blockquote>
+              <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                  <p>Free refreshments, video games, and candy. This makes it easy to bring along the kids when out trying to get a haircut. They also offer women's styling as well. Look closely for it as it's a hidden gem…
+                  </p>
+                  <important>- George S.</important>
+                </div>
+              </div>
+            </blockquote>
+          </div>
+          <!-- Quote 3 -->
+          <div class="item">
+            <blockquote>
+              <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                  <p>...takes care and does a great job! And she actually "gets" male hair in general, especially the military cut. She's consistent and takes pride in her work.
+                  </p>
+                  <important>- Derek B.</important>
+                </div>
+              </div>
+            </blockquote>
+          </div>
+        <!-- Quote 4 -->
+          <div class="item">
+            <blockquote>
+              <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                  <p>Very nice and courteous barber.Haircut is always consistant.Best barber for military style haircuts.
+                  </p>
+                  <important>- John L.</important>
+                </div>
+              </div>
+            </blockquote>
+          </div>
+        </div>
+
+        <!-- Bottom Carousel Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="img/bethanyo.png" alt="">
+          </li>
+          <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="img/georges.png" alt="">
+          </li>
+          <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="img/derekb.png" alt="">
+          </li>
+          <li data-target="#quote-carousel" data-slide-to="3"><img class="img-responsive" src="img/johnl.png" alt="">
+          </li>
+        </ol>
+   
+        <!-- Carousel Buttons Next/Prev -->
+        <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
+        <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--  Testimonials  END -->
 
   <hr>
 <section>
