--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -45,6 +45,7 @@
             <li><a href="#services" class="text header-text btn-link services">Services</a></li>
             <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#myModal">Hours</a></li>
             <li><a href="#location" class="text header-text btn-link">Location</a></li>
+            <li><a href="#testimonials" class="text header-text btn-link">Testimonials</a></li>
             <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#contact-modal">Contact us</a></li>
           </ul>
         </li>
@@ -401,6 +402,7 @@
 	<hr>
 	<!--Begin Location Section-->
 	<section>
+			<a id="location"></a>
 			<div id="map-canvas"></div>
 		<div class="shop-info">
 			<br>
@@ -416,7 +418,6 @@
 			<br>
 			<br>
 			<br>
-			<a id="location"></a>
   			<a href="#top" class="return-top">Back to Top</a> 
 		</div>
 	</section>
@@ -427,6 +428,7 @@
 
 
 <!--  Testimonials  START -->
+			<a id="testimonials"></a>
 <h1 id="quote-title">What people are saying<h1>
 <div class="container">
   <div class="row">
@@ -508,11 +510,8 @@
 <!--  Testimonials  END -->
 
   <hr>
-<section>
-  <div id="map-canvas"></div>
-  <a id="location"></a>
-  <a href="#top" class="return-top">Back to Top</a> 
-</section>
+  			<a href="#top" class="return-top">Back to Top</a> 
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
    <script src="js/lightbox.js"></script>
