--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -396,29 +396,27 @@
 			<a id="location"></a>
 			<div id="map-canvas"></div>
 		<div class="shop-info">
-			<br>
-			<br>
-			<br>
-			<br>
 			<p class="shop-address pcbs"><span class="patriot">Patriot</span> Cuts <span class="bs">Barber Shop</span></p>
 			<p class="shop-address">3246 Broadway Street</p>
 			<p class="shop-address">San Antonio, TX., 78209 </p>
 			<p class="phone-number">phone: (210) 822-0780</p>
 			<p class="loc-hours">hours: M - F, 10am - 7pm; Sat, 10am - 6pm; Sun, 11am - 5pm</p>
 			<br>
-			<br>
-			<br>
-			<br>
-
-  			<a href="#top" class="return-top">Back to Top</a> 
-
-		</div>
-	</section>
-
-
-
-  <hr>
-
+      <div class="creditCards">
+              <p>
+                We except the following Cedit Cards:
+              </p>
+              <p>
+                <img src="img/AmericanExpress.png" style="width:3em; height:2em;" alt="American Express">
+                <img src="img/Discover.png" style="width:3em; height:2em;" alt="Discover">
+                <img src="img/MasterCard.png" style="width:3em; height:2em;" alt="MasterCard">
+                <img src="img/Visa(Inverted).png" style="width:3em; height:2em;" alt="Visa">
+              </p>
+              <hr>
+            </div>
+    </div>
+  </section>
+  			<!-- <a href="#top" class="return-top">Back to Top</a>  -->
 
 <!--  Testimonials  START -->
 			<a id="testimonials"></a>
@@ -503,6 +501,22 @@
 <!--  Testimonials  END -->
 
   <hr>
+  <!-- <section> -->
+  <div class="footer">
+    <a href="https://www.facebook.com/Patriot-Cuts-Barber-Shop-913818735332593/info?tab=overview" title="Facebook" target="_blank"><img src="img/Facebook.png" style="width:2em; height:2em;"></img>
+    </a>
+    <a href="http://www.gmail.com" title="Gmail" target="_blank"><img src="img/Gmail.png" style="width:2em; height:2em;"></img>
+    </a>
+    <a href="https://plus.google.com/116352937320744275256/about" title="Google" target="_blank"><img src="img/Google+.png" style="width:2em; height:2em;"></img>
+    </a>
+    <a href="http://www.yellowpages.com/san-antonio-tx/mip/patriot-cuts-barber-shop-516405855?lid=516405855" title="Yellow Pages" target="_blank"><img src="img/YellowPages.png" style="width:2em; height:2em;"></img>
+    </a>
+    <a href="http://www.yelp.com/biz/patriot-cuts-barber-shop-san-antonio" title="Yelp" target="_blank"><img src="img/Yelp.png" style="width:2em; height:2em;"></img>
+    </a>
+    <br> &copy; 2016 <span class="patriot">Patriot</span> Cuts <span class="bs">Barber Shop</span>
+    <br>
+    <small>Designed by: Frank Diaz | Kevin Standifer | Jason Dunn</small>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
