--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="/patriot_cuts.js">  
 
 </head>
 <body>
@@ -30,13 +29,12 @@
         <img src="pcbsLogoPoleWh.png" alt="logo" width="200" height="75">
       </div>
       <div class="collapse navbar-collapse navbar-right" id="myNavbar">
-
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#services" class="text header-text btn-link services">Services</a></li>
-            <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#myModal">Hours</a></li>
-            <li><a href="#location" class="text header-text btn-link">Location</a></li>
+            <li><a href="#services"     class="text header-text btn-link">Services</a></li>
+            <li><a href="#button"       class="text header-text btn-link" data-toggle="modal" data-target="#myModal">Hours</a></li>
+            <li><a href="#location"     class="text header-text btn-link">Location</a></li>
             <li><a href="#testimonials" class="text header-text btn-link">Testimonials</a></li>
-            <li><a href="#button" class="btn btn-link text" data-toggle="modal" data-target="#contact-modal">Contact us</a></li>
+            <li><a href="#button"       class="text header-text btn-link" data-toggle="modal" data-target="#contact-modal">Contact us</a></li>
           </ul>
         </li>
       </div>
