quote carousel solor filter added

--- a/public/patriot_cuts.html
+++ b/public/patriot_cuts.html
@@ -417,8 +417,8 @@
 
 <!--  Testimonials  START -->
 			<a id="testimonials"></a>
+<div class="container" id="quotes">
 <h1 id="quote-title">What people are saying<h1>
-<div class="container">
   <div class="row">
     <div class="col-md-12">
       <div class="carousel slide" data-ride="carousel" id="quote-carousel">
@@ -435,7 +435,7 @@
                 </div>
               </div>
             </blockquote>
-          </div>
+          </div>  <!-- END Quote 1 -->
           <!-- Quote 2 -->
           <div class="item">
             <blockquote>
@@ -447,7 +447,7 @@
                 </div>
               </div>
             </blockquote>
-          </div>
+          </div>  <!-- END Quote 2 -->
           <!-- Quote 3 -->
           <div class="item">
             <blockquote>
@@ -459,7 +459,7 @@
                 </div>
               </div>
             </blockquote>
-          </div>
+          </div>  <!-- END Quote 3 -->
         <!-- Quote 4 -->
           <div class="item">
             <blockquote>
@@ -471,7 +471,7 @@
                 </div>
               </div>
             </blockquote>
-          </div>
+          </div>  <!-- END Quote 4 -->
         </div>
 
         <!-- Bottom Carousel Indicators -->
@@ -490,10 +490,10 @@
         <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
         <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
 
-      </div>
-    </div>
-  </div>
-</div>
+      </div> <!-- END Quote carousel slider-->
+    </div>  <!-- END quote carousel column -->
+  </div>    <!-- END quote carousel row -->
+</div>  <!-- END quote carousel main container-->
 
 <!--  Testimonials  END -->
 
